mainly a submit to backup work done. A lot of cron is finished, and some work on the new interface. Still need to fix the step to actually step instead of try to do divisible by

--- a/appengine_utilities/interface/css/main.css
+++ b/appengine_utilities/interface/css/main.css
@@ -59,3 +59,6 @@ white-space: pre-wrap; /* CSS2.1 compliant */
 white-space: -moz-pre-wrap; /* Mozilla-based browsers */
 white-space: o-pre-wrap; /* Opera 7+ */
 }
+
+td { padding: .5em; }
+th { background: #454545 no-repeat top right; color: #EBEBEB; }
